--- a/shippable.yml
+++ b/shippable.yml
@@ -1,25 +1,34 @@
 language: node_js
 
 node_js:
-  - 0.10.25
+  - 0.12 
+  - 5.0
+  - 4.2.2
+  - 0.11
+  - 0.10
 
-# For xunit-file module to put results in shippable folder
-env:
-  - XUNIT_FILE=shippable/testresults/result.xml
+services:
+  - postgres
+  
+build:
+ pre_ci_boot:
+    image_name: drydock/u12nodpls
+    image_tag: prod
+    pull: true
+    options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
 
-# Postgres binds to 127.0.0.1 by default and is started on boot. Default username is "postgres" with no password
-# Create a DB as part of before script to use it
-# Make folders for the reports, and create the SQL db
-before_script:
-  - mkdir -p shippable/testresults
-  - mkdir -p shippable/codecoverage
-  - psql -c 'CREATE DATABASE app_test;' -U postgres
+ ci:  
+    - echo "Hello, World!"
+    - env
+    - echo $PATH
+    - reports --help
+    - node --version
+    - mkdir -p shippable/testresults
+    - mkdir -p shippable/codecoverage
+    - npm install
+    - ./node_modules/.bin/istanbul cover grunt -- -u tdd
+    - ./node_modules/.bin/istanbul report cobertura --dir  shippable/codecoverage/
+    - cat shippable/codecoverage/cobertura-coverage.xml
+    - export XUNIT_FILE=shippable/testresults/result.xml
+    - grunt
 
-script:
-  - npm test
-
-# Generate coverage report with istanbul
-after_script:
-#  - psql -c 'create database if not exists test;' -U postgres
-  - ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --ui=bdd --reporter=xunit-file
-  - ./node_modules/.bin/istanbul report cobertura --dir shippable/codecoverage/
