--- a/shippable.yml
+++ b/shippable.yml
@@ -12,7 +12,7 @@ services:
   
 build:
  pre_ci_boot:
-    image_name: drydock/u12nodpls
+    image_name: drydock/u12nodall
     image_tag: prod
     pull: true
     options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
